<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">COER</string>
    <string name="app_full_name1">College of dentists</string>
    <string name="app_full_name2">Entre Ríos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_main2">COER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="log_in">Login</string>
    <string name="registration_number">Registration number</string>
    <string name="guest">Guest</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nav_account">Account</string>
    <string name="nav_reservations">My reservations</string>
    <string name="nav_news">News</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_method_payments">Method payments</string>
    <string name="nav_processes">Processes</string>
    <string name="nav_logout">Log Out</string>
    <string name="loading">Loading...</string>
    <string name="today">Today</string>

    <!--ON BOARDING-->
    <string name="on_boarding_title1">News</string>
    <string name="on_boarding_title3">Account</string>
    <string name="on_boarding_description1">Latest news from our institution</string>
    <string name="on_boarding_description2">Learn about our courses</string>
    <string name="on_boarding_description3">Manage your accounts and reservations</string>
    <string name="on_boarding_title2">Courses</string>
    <string name="on_boarding_title4">Reservations</string>
    <string name="on_boarding_description4">Reserve rooms in our accommodations</string>
    <string name="get_started">GET STARTED</string>
    <string name="message_logout">Are you safe do you want exit?</string>
    <string name="confirm">Confirm</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="new_password">New password</string>
    <string name="dni">DNI</string>
    <string name="user_name">Username</string>
    <string name="title_change_password">Change password</string>
    <string name="free">Free</string>
    <string name="reserve">Reserve</string>
    <string name="message_not_logged">Unauthorized user, you must log in to make the reservation</string>
    <string name="dates">Dates</string>
    <string name="enrollment">Enrollment</string>
    <string name="name">Name</string>
    <string name="last_name">Lastname</string>
    <string name="phone">Phone</string>
    <string name="amount_people">Count people</string>
    <string name="additional_information">Additional information</string>
    <string name="title_reserve_room">Reserve room</string>
    <string name="select_room">--- Select room ---</string>
    <string name="date_enrollment">Date of enrollment</string>
    <string name="error_data_no_valid">\"Error data, no valid\"</string>
    <string name="message_passwords_do_not_match">Passwords do not match</string>
    <string name="restore">Restore</string>
    <string name="title_reset_password">Reset password</string>
    <string name="message_reset_password_successful" >Password reset and sent to your email</string>
    <string name="message_reset_password_failed">Your password could not be restored</string>
    <string name="message_something_went_wrong">Error, something went wrong</string>
    <string name="message_reservation_failed">Reservation failed, please try again later</string>
    <string name="message_reservation_successful">Successful booking</string>
    <string name="message_withot_reservation">You don\'t have any reservations</string>
    <string name="last_news">Last news</string>
    <string name="lodging_timbues">Accommodation Complex Colón \"Los Timbues\"</string>
    <string name="lodging_panana">Accommodation Sede COER Paraná</string>
    <string name="message_without_courses">No course found</string>
    <string name="message_withot_news">No news found</string>
    <string name="cost">Cost:</string>
    <string name="reserve_timbues">Reserve in timbues</string>
    <string name="reserve_parana">Reserve in paraná</string>
    <string name="message_withot_method_payments">No method payment found</string>
    <string name="updating_dates">Updating dates...</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="detail_arrival">Detail the estimated time of your arrivel</string>
    <string name="created_at">Created at</string>
    <string name="lodging">Lodging</string>
    <string name="room">Room</string>
    <string name="dates_stay">Dates stay</string>
    <string name="reservation">Reservation</string>
    <string name="date_reserve">Date reserve</string>
    <string name="sending">Sending...</string>
    <string name="rate_from">Rate from</string>
    <string name="guide_stage_1">Main menu</string>
    <string name="guide_stage_description_1">Click here to see the main menu</string>
    <string name="guide_stage_2">New reservation</string>
    <string name="guide_stage_description_2">Click here to make a new reservation</string>
    <string name="message_without_processes">No processing was found</string>
    <string name="download_document">Download document</string>
    <string name="nav_bills">See here your invoice</string>
    <string name="message_error_dates_selected">Error when in dates selected (There may be busy days between the selected dates)</string>

    <!--INPUT TEXT VIEW-->
    <string name="is_empty">is empty</string>
    <string name="is_invalid">is invalid</string>
    <string name="error_characters_min">, characters min is</string>

</resources>
