<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_reserves"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_reservations" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_courses" />

        <item
            android:id="@+id/nav_method_payments"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_method_payments" />
        <item
            android:id="@+id/nav_processes"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_processes" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_logout" />
    </group>

</menu>
