<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="moises.com.appcoer.ui.dialogs.ReserveDetailDialog">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/tv_state"
            style="@style/TextViewSmall"
            android:text="Pending"
            android:layout_gravity="end"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:text1="@string/name"
            app:text2="@string/name"
            app:iconImage="@drawable/svg_account_circle_gray"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:text1="@string/email"
            app:text2="@string/email"
            app:iconImage="@drawable/svg_email"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:text1="@string/phone"
            app:text2="@string/phone"
            app:iconImage="@drawable/svg_phone"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_lodging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="2"
            app:text1="@string/lodging_timbues"
            app:text2="@string/lodging"
            app:iconImage="@drawable/svg_home_modern_gray"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="2"
            app:text1="@string/room"
            app:text2="@string/room"
            app:iconImage="@drawable/svg_hotel_gray"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_amount_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:text1="@string/amount_people"
            app:text2="@string/amount_people"
            app:iconImage="@drawable/svg_account_multiple"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:text1="@string/date_reserve"
            app:text2="@string/date_reserve"
            app:iconImage="@drawable/svg_calendar_check"
            android:visibility="gone"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_dates_stay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="3"
            app:text1="@string/dates_stay"
            app:text2="@string/dates_stay"
            app:iconImage="@drawable/svg_calendar"/>

        <moises.com.appcoer.ui.customviews.TextImageView
            android:id="@+id/tiv_additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:maxLines="3"
            app:text1="@string/additional_information"
            app:text2="@string/additional_information"
            app:iconImage="@drawable/svg_note_text"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
